Add a limitation: changing zettel syntax is not reflected in file extension
FossilOrigin-Name: 44af840743a7b69b916e170fddc2a82da713f88c87e8e62d307266ce0a9a9c1d

--- a/www/plan.wiki
+++ b/www/plan.wiki
@@ -19,6 +19,7 @@ They are planned to be solved.
      &ldquo;json&rdquo;.
   *  The horizontal tab character (<tt>U+0009</tt>) is not supported.
   *  Missing support for citation keys.
+  *  Changing the content syntax is not reflected in file extension.
   *  &hellip;
 
 <h3>Planned improvements</h3>
