Add system zettel about license, contributors, and dependencies
FossilOrigin-Name: 365245cba67c9dea75c630915018cd1d15c2e482219229c0125d5097de78ddf5

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -6,6 +6,13 @@
      addition to the search whether a word just contains word of the search
      term.
      (minor: api, webui)
+  *  Add system zettel about license, contributors, and dependencies (and their
+     license).
+     (minor)
+
+     For a nicer layout of zettel identifier, the zettel about environment
+     values and about runtime metrics got new zettel identifier. This affects
+     only user that referenced those zettel.
 
 <a name="0_0_12"></a>
 <h2>Changes for Version 0.0.12 (2021-04-16)</h2>
