Allow full-text search for URLs
FossilOrigin-Name: 4e5c9f6f47b456b0c8a998a09ae1decbc6d3dd1fb58857deb8e157769e0686ba

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -6,6 +6,8 @@
      addition to the search whether a word just contains word of the search
      term.
      (minor: api, webui)
+  *  Full-text search for URLs, with above additional operators.
+     (minor: api, webui)
   *  Add system zettel about license, contributors, and dependencies (and their
      license).
      For a nicer layout of zettel identifier, the zettel about environment
