Ignore certain HTML content when encoding a zettel in HTML.
FossilOrigin-Name: f8a50242f434ea638ae021457c8382b22e4ce93e9cbb0076354b23c4af8703a4

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -30,6 +30,10 @@
   *  Web server processes startup configuration <tt>url-prefix</tt>. There is
      no need for stripping the prefix by a front-end web server any more.
      (minor: webui, api)
+  *  For security reasons, HTML blocks are not encoded as HTML if they contain
+     certain snippets, such as <tt>&lt;script</tt> or <tt>&lt;iframe</tt>.
+     These can be caused by using CommonMark as a zettel syntax.
+     (major)
 
 <a name="0_0_12"></a>
 <h2>Changes for Version 0.0.12 (2021-04-16)</h2>
