--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -1,7 +1,10 @@
 <title>Change Log</title>
 
+<a name="0_0_14"></a>
+<h2>Changes for Version 0.0.14 (pending)</h2>
+
 <a name="0_0_13"></a>
-<h2>Changes for Version 0.0.13 (pending)</h2>
+<h2>Changes for Version 0.0.13 (2021-06-01)</h2>
   *  Startup configuration <tt>place-<em>X</em>-uri</tt> (where <em>X</em> is a
      number greater than zero) has been renamed to
      <tt>place-uri-<em>X</em></tt>.
