--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (pending)</h2>
+  *  New suported metadata key <tt>place-number</tt>, which gives an indication
+     from which place the zettel was loaded.
 
 <a name="0_0_13"></a>
 <h2>Changes for Version 0.0.13 (2021-06-01)</h2>
