--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,8 +2,12 @@
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (pending)</h2>
+  *  Remove support for paging of WebUI list. Runtime configuration key
+     <tt>list-page-size</tt> is removed.
+     (major: webui)
   *  New suported metadata key <tt>place-number</tt>, which gives an indication
      from which place the zettel was loaded.
+     (minor)
 
 <a name="0_0_13"></a>
 <h2>Changes for Version 0.0.13 (2021-06-01)</h2>
