Allow to determine metadata type by speifying an appropriate suffix
FossilOrigin-Name: 85ff6a8650cf35991c5423aad6d77d9b0ec74849bc8ec442b6c53fd3046b35cd

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,6 +11,10 @@
      <tt>list-page-size</tt> is removed. If you still specify it, it will be
      ignored.
      (major: webui)
+  *  Type of used-defined metadata is determined by suffix of key: "-number",
+     "-url", "-zid" will result the values to be interpreted as a number, an
+     URL, or a zettel identifier.
+     (minor, but possibly breaking)
   *  New suported metadata key <tt>box-number</tt>, which gives an indication
      from which box the zettel was loaded.
      (minor)
