--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,7 +12,8 @@
      ignored.
      (major: webui)
   *  Use endpoint <tt>/v</tt> for user authentication via API. Endpoint
-     <tt>/a</tt> is now used for the web user interface only.
+     <tt>/a</tt> is now used for the web user interface only. Similar, endpoint
+     <tt>/y</tt> (&ldquo;zettel context&rdquo;) is renamed to <tt>/x</tt>.
      (minor, possibly breaking)
   *  Type of used-defined metadata is determined by suffix of key:
      <tt>-number</tt>, <tt>-url</tt>, <tt>-zid</tt> will result the values to
