--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,12 @@
 
 <a name="0_0_15"></a>
 <h2>Changes for Version 0.0.15 (pending)</h2>
+  *  Move again endpoint characters for authentication to make room for future
+     features. WebUI authentication moves from <tt>/a</tt> to <tt>/i</tt>
+     (login) and <tt>/j</tt> (logout). API authentication moves from
+     <tt>/v</tt> to </tt>/a</tt>. Since the API client is updated too, this
+     should not be a breaking change for most users.
+     (minor: api, webui; possibly breaking)
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (2021-07-23)</h2>
