Separate API endpoint /z/{ID} to an endpoint /z/{ID} which returns the pure zettel data, and endpoint /v/{ID} which returns parsed and evaluated zettel data
FossilOrigin-Name: 416c6dc6b1a38bb8a6640bef3de73e39b9769a341bfe61d581f7168f4ad07624

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,12 @@
      <tt>/v</tt> to </tt>/a</tt>. Since the API client is updated too, this
      should not be a breaking change for most users.
      (minor: api, webui; possibly breaking)
+  *  Add API endpoint <tt>/v/{ID}</tt> to retrieve an evaluated zettel in
+     various encodings. Mostly replaces endpoint <tt>/z/{ID}</tt> for other
+     encodings except &ldquo;json&rdquo; and &ldquo;raw&rdquo;. Endpoint
+     <tt>/z/{ID}</tt> now only returns JSON data, except when query parameter
+     <tt>raw</tt> is given. See documentation for details.
+     (Major: api; possibly breaking)
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (2021-07-23)</h2>
