Show folgezettel at the bottom of each page with full title
FossilOrigin-Name: f5f2b2104199fcec6e3bfd3cece20f785895ad8fb1d1a7f3df369adc8b2dcb33

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -21,6 +21,8 @@
      is checked, as well as a possible &ldquo;transclusion bomb &rdquo;
      (similar to an XML bomb). See manual for details.
      (major: zettelmarkup)
+  *  Folgezettel are now displayed with full title at the bottom of a page.
+     (minor: webui)
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (2021-07-23)</h2>
