API for retrieving parsed, but unevaluated zettel in various encodings
FossilOrigin-Name: d369229b196aeae2d450318e0b2e1527d230b1c5067c6824980c09fc54e31638

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,6 +23,11 @@
      (major: zettelmarkup)
   *  Folgezettel are now displayed with full title at the bottom of a page.
      (minor: webui)
+  *  Add API endpoint <tt>/p/{ID}</tt> to retrieve a parsed, but not evaluated
+     zettel in various encodings.
+     (minor: api)
+  *  Fix: do not list a shadowed zettel that matches the select criteria.
+     (minor)
 
 <a name="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (2021-07-23)</h2>
