Add new endpoint /w/{ID} to retrieve raw zettel data
FossilOrigin-Name: d8139b7649ab90c7f2b83dfaf500c6b18758e601be6d1d27722f205563281040

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,6 +23,9 @@
      you edit a zettel through Zettelstore. If you just modify the zettel
      files, your tag values remain unchanged.
      (major; breaking)
+  *  To retrieve raw zettel data, use the new endpoint <tt>/w/{ID}</tt>.
+     Previously, <tt>/z/{ID}?raw</tt> was the endpoint to get the same effect.
+     (minor: api; breaking)
   *  Allows to transclude / expand the content of another zettel into a target
      zettel when the zettel is rendered. By using the syntax of embedding an
      image (which is some kind of expansion too), the first top-level paragraph
